# uta-travel-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: ci.yml
agent-templates/: curator.yaml  guide.yaml  indexer.yaml  main.yaml  planner.yaml  researcher.yaml
apps/web/: Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
cmd/api-gateway/: main.go
cmd/orchestrator/: Dockerfile  config.go  main.go
docs/: CHANGELOG_v0.6.1.md  skill-development-standard.md  skills-guide.md
docs/agents/: curator-agent.md  indexer-agent.md  main-agent.md  researcher-agent.md
docs/architecture/: agent-refactoring-design.md  data-flow.md  mcp-client-design.md  multi-agent-design.md  multi-agent.md  overview.md  skills-implementation-guide.md
docs/core-flows/: agent-creation.md  rag-pipeline.md
docs/guides/: getting-started.md
docs/ideas/: destination-calendar.md
docs/integrations/: mcp-and-skills-guide.md
docs/roadmap/: v0.4.0-alpha.md  v0.5.0-alpha.md  v0.6.0-alpha.md
docs/services/: embedding-service.md
docs/technical-challenges/: grpc-multi-language.md  indexing-issues.md  phase2-implementation.md  phase3-implementation.md  phase4-implementation.md  qdrant-integration.md  researcher-agent-issues.md
infra/docker/: .env.example  Dockerfile.destination-agent  Dockerfile.guide-agent  Dockerfile.orchestrator  Dockerfile.planner-agent  Dockerfile.web  README.md  api-gateway.Dockerfile  docker-compose.dev.yml  docker-compose.yml  embedding.Dockerfile  llm-gateway.Dockerfile  vision.Dockerfile  web.Dockerfile
internal/agent/: agent.go  curator_agent.go  errors.go  factory.go  guide_agent.go  indexer_agent.go  llm_agent.go  llm_agent_test.go  long_horizon_agent.go  long_horizon_agent_test.go  main_agent.go  main_agent_test.go  memory.go  prompts.go  registry.go  repository.go  researcher_agent.go  session_agent.go  shared_state.go  subagent.go  subagent_test.go  template.go  tools.go
internal/contextx/: engineer.go  gssc.go  gssc_test.go  packet.go
internal/errors/: errors.go
internal/grpc/: client.go  server.go  services.go
internal/llm/: provider.go
internal/logging/: logging.go
internal/mcp/: client.go  tools.go
internal/memory/: memory.go  preferences.go  preferences_test.go  semantic.go  semantic_test.go
internal/rag/: service.go
internal/router/: router.go  session_handler.go
proto/: Makefile  README.md  buf.gen.yaml  buf.yaml
services/destination-agent/: README.md  pyproject.toml  test_e2e.py  test_rag_simple.py  test_rag_standalone.py
services/destination-agent/src/: agent.py  main.py
services/destination-agent/src/crawler/: __init__.py
services/destination-agent/src/rag/: __init__.py  document_processor.py  embeddings.py  rag_service.py  vector_store.py
services/destination-agent/tests/: __init__.py  conftest.py  test_document_processor.py  test_embeddings.py  test_rag_service.py
services/embedding/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/embedding/agent/: common_pb2.py  embedding_pb2.py  embedding_pb2_grpc.py
services/embedding/src/: __init__.py  grpc_service.py  main.py  service.py
services/embedding/tests/: __init__.py  conftest.py  test_service.py
services/guide-agent/: README.md  pyproject.toml
services/guide-agent/src/: agent.py  main.py
services/guide-agent/src/location/: __init__.py
services/guide-agent/src/narrator/: __init__.py
services/guide-agent/src/vision/: __init__.py
services/llm-gateway/: pyproject.toml
services/llm-gateway/src/: __init__.py  gateway.py  grpc_server.py  grpc_service.py  main.py
services/planner-agent/: README.md  pyproject.toml
services/planner-agent/src/: agent.py  main.py
(+102 files in other folders)
