[project]
name = "destination-agent"
version = "0.1.0"
description = "Destination Agent for UTA Travel Agent - RAG-powered travel knowledge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "qdrant-client>=1.4.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]